--- a/Parking App/bin/DaysHours4.fxml
+++ b/Parking App/bin/DaysHours4.fxml
@@ -3,41 +3,43 @@
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="TimePane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.Scene4Controller">
+<AnchorPane fx:id="TimePane" style="-fx-background-color: #0C2340;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.Scene4Controller">
    <children>
       <Pane prefHeight="600.0" prefWidth="800.0">
          <children>
-            <Text layoutX="189.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Expected Parking Time">
+            <Text fill="WHITE" layoutX="189.0" layoutY="66.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Expected Parking Time">
                <font>
                   <Font size="44.0" />
                </font>
             </Text>
-            <Text layoutX="73.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Su">
+            <Text fill="WHITE" layoutX="73.0" layoutY="136.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Su">
                <font>
                   <Font size="33.0" />
                </font>
             </Text>
-            <Text layoutX="70.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mo">
+            <Text fill="WHITE" layoutX="70.0" layoutY="205.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Mo">
                <font>
                   <Font size="33.0" />
                </font>
             </Text>
-            <Text layoutX="72.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tu">
+            <Text fill="WHITE" layoutX="72.0" layoutY="282.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Tu">
                <font>
                   <Font size="33.0" />
                </font>
             </Text>
-            <Text layoutX="72.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="We">
+            <Text fill="WHITE" layoutX="72.0" layoutY="359.0" strokeType="OUTSIDE" strokeWidth="0.0" text="We">
                <font>
                   <Font size="33.0" />
                </font>
             </Text>
-            <Text layoutX="74.0" layoutY="424.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Th">
+            <Text fill="WHITE" layoutX="74.0" layoutY="424.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Th">
                <font>
                   <Font size="33.0" />
                </font>
@@ -67,12 +69,12 @@
                   <Font size="20.0" />
                </font>
             </CheckBox>
-            <Text layoutX="73.0" layoutY="483.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fr">
+            <Text fill="WHITE" layoutX="73.0" layoutY="483.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Fr">
                <font>
                   <Font size="33.0" />
                </font>
             </Text>
-            <Text layoutX="72.0" layoutY="540.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sa">
+            <Text fill="WHITE" layoutX="72.0" layoutY="540.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Sa">
                <font>
                   <Font size="33.0" />
                </font>
@@ -87,37 +89,37 @@
                   <Font size="20.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="Su24hrBox" layoutX="215.0" layoutY="103.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr">
+            <CheckBox fx:id="Su24hrBox" layoutX="215.0" layoutY="103.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="Mo24hrBox" layoutX="215.0" layoutY="171.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr">
+            <CheckBox fx:id="Mo24hrBox" layoutX="215.0" layoutY="171.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="Tu24hrBox" layoutX="215.0" layoutY="248.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr">
+            <CheckBox fx:id="Tu24hrBox" layoutX="215.0" layoutY="248.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="We24hrBox" layoutX="215.0" layoutY="326.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr">
+            <CheckBox fx:id="We24hrBox" layoutX="215.0" layoutY="326.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="Th24Box" layoutX="215.0" layoutY="391.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr">
+            <CheckBox fx:id="Th24Box" layoutX="215.0" layoutY="391.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="Fr24hrBox" layoutX="215.0" layoutY="448.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr">
+            <CheckBox fx:id="Fr24hrBox" layoutX="215.0" layoutY="448.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
             </CheckBox>
-            <CheckBox fx:id="Su24hrBox" layoutX="215.0" layoutY="508.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr">
+            <CheckBox fx:id="Su24hrBox" layoutX="215.0" layoutY="508.0" mnemonicParsing="false" prefHeight="42.0" prefWidth="88.0" text="24 hr" textFill="WHITE">
                <font>
                   <Font size="20.0" />
                </font>
@@ -136,17 +138,29 @@
             <TextField fx:id="ThEndField" layoutX="578.0" layoutY="398.0" />
             <TextField fx:id="FrEndField" layoutX="578.0" layoutY="458.0" />
             <TextField fx:id="SaEndField" layoutX="578.0" layoutY="515.0" />
-            <Text layoutX="416.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start">
+            <Text fill="WHITE" layoutX="416.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Start">
                <font>
                   <Font size="17.0" />
                </font>
             </Text>
-            <Text layoutX="641.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="End">
+            <Button fx:id="BackButton" layoutX="-10.0" layoutY="524.0" mnemonicParsing="false" onAction="#BackButtonClicked" prefHeight="37.0" prefWidth="42.0" style="-fx-background-color: #0C2340;">
+               <graphic>
+                  <ImageView fitHeight="62.0" fitWidth="91.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Data/BackArrow.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Text fill="WHITE" layoutX="641.0" layoutY="92.0" strokeType="OUTSIDE" strokeWidth="0.0" text="End">
                <font>
                   <Font size="17.0" />
                </font>
             </Text>
-            <Button fx:id="Submit" layoutX="701.0" layoutY="552.0" mnemonicParsing="false" onAction="#SubmitButtonClicked" text="Submit" />
+            <Button fx:id="Submit" layoutX="706.0" layoutY="551.0" mnemonicParsing="false" onAction="#SubmitButtonClicked" prefHeight="36.0" prefWidth="75.0" style="-fx-background-color: #F15A22;" text="Submit" textFill="WHITE">
+               <font>
+                  <Font size="16.0" />
+               </font></Button>
          </children>
       </Pane>
    </children>
