--- a/Parking App/src/PermitSelection3.fxml
+++ b/Parking App/src/PermitSelection3.fxml
@@ -1,32 +1,61 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.image.Image?>
+<?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane fx:id="SelectorPane" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.Scene3Controller">
+<AnchorPane fx:id="SelectorPane" style="-fx-background-color: #0C2340;" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.controller.Scene3Controller">
    <children>
       <Pane prefHeight="600.0" prefWidth="800.0">
          <children>
-            <Text layoutX="146.0" layoutY="81.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Permit Type" textAlignment="CENTER">
+            <Button fx:id="HourlySurfaceButton" layoutX="98.0" layoutY="303.0" mnemonicParsing="false" onAction="#HourlySurfaceButtonClicked" prefHeight="59.0" prefWidth="155.0" style="-fx-background-color: #F15A22;" text="Hourly" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <Text fill="WHITE" layoutX="133.0" layoutY="72.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Select Permit Type" textAlignment="CENTER">
                <font>
                   <Font size="64.0" />
                </font>
             </Text>
-            <Button fx:id="DaySurfaceButton" layoutX="98.0" layoutY="204.0" mnemonicParsing="false" onAction="#DaySurfaceButtonClicked" prefHeight="59.0" prefWidth="155.0" text="One Day " />
-            <Button fx:id="HourlySurfaceButton" layoutX="98.0" layoutY="303.0" mnemonicParsing="false" onAction="#HourlySurfaceButtonClicked" prefHeight="59.0" prefWidth="155.0" text="Hourly" />
-            <Button fx:id="FullYearSurfaceButton" layoutX="98.0" layoutY="396.0" mnemonicParsing="false" onAction="#FullYearSurfaceButtonClicked" prefHeight="59.0" prefWidth="155.0" text="Full Year" />
-            <Button fx:id="OneDayGarageButton" layoutX="483.0" layoutY="204.0" mnemonicParsing="false" onAction="#OneDayGarageButtonClicked" prefHeight="59.0" prefWidth="155.0" text="One Day" />
-            <Button fx:id="HourlyGarageButton" layoutX="482.0" layoutY="302.0" mnemonicParsing="false" onAction="#HourlyGarageButtonClicked" prefHeight="59.0" prefWidth="155.0" text="Hourly" />
-            <Button fx:id="FullYearButton" layoutX="481.0" layoutY="396.0" mnemonicParsing="false" onAction="#FullYearButtonClicked" prefHeight="59.0" prefWidth="155.0" text="Full Year" />
-            <Text layoutX="128.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Surface" textAlignment="CENTER" wrappingWidth="95.28050231933594">
+            <Button fx:id="DaySurfaceButton" layoutX="98.0" layoutY="204.0" mnemonicParsing="false" onAction="#DaySurfaceButtonClicked" prefHeight="59.0" prefWidth="155.0" style="-fx-background-color: #F15A22;" text="One Day " textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <Button fx:id="FullYearSurfaceButton" layoutX="98.0" layoutY="396.0" mnemonicParsing="false" onAction="#FullYearSurfaceButtonClicked" prefHeight="59.0" prefWidth="155.0" style="-fx-background-color: #F15A22;" text="Full Year" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <Button fx:id="OneDayGarageButton" layoutX="528.0" layoutY="204.0" mnemonicParsing="false" onAction="#OneDayGarageButtonClicked" prefHeight="59.0" prefWidth="155.0" style="-fx-background-color: #F15A22;" text="One Day" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <Button fx:id="HourlyGarageButton" layoutX="528.0" layoutY="302.0" mnemonicParsing="false" onAction="#HourlyGarageButtonClicked" prefHeight="59.0" prefWidth="155.0" style="-fx-background-color: #F15A22;" text="Hourly" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <Button fx:id="FullYearButton" layoutX="528.0" layoutY="396.0" mnemonicParsing="false" onAction="#FullYearButtonClicked" prefHeight="59.0" prefWidth="155.0" style="-fx-background-color: #F15A22;" text="Full Year" textFill="WHITE">
+               <font>
+                  <Font size="24.0" />
+               </font></Button>
+            <Text fill="WHITE" layoutX="128.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Surface" textAlignment="CENTER" wrappingWidth="95.28050231933594">
                <font>
                   <Font size="25.0" />
                </font>
             </Text>
-            <Text layoutX="500.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Garage" textAlignment="CENTER" wrappingWidth="118.93353271484375">
+            <Button fx:id="BackButton" layoutX="5.0" layoutY="533.0" mnemonicParsing="false" onAction="#BackButtonClicked" prefHeight="44.0" prefWidth="113.0" style="-fx-background-color: #0C2340;">
+               <graphic>
+                  <ImageView fitHeight="50.0" fitWidth="75.0" pickOnBounds="true" preserveRatio="true">
+                     <image>
+                        <Image url="@../Data/BackArrow.png" />
+                     </image>
+                  </ImageView>
+               </graphic>
+            </Button>
+            <Text fill="WHITE" layoutX="547.0" layoutY="160.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Garage" textAlignment="CENTER" wrappingWidth="118.93353271484375">
                <font>
                   <Font size="25.0" />
                </font>
